<?xml version="1.0" encoding="utf-8"?>

<!--dashboard layout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fff">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_backgrond"
        android:src="@drawable/my_school"
        android:scaleType="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:text="@string/my_school"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/add_school"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="68dp"
        android:text="@string/add_school"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="204dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/university"
        android:background="@drawable/circle_backgrond"
        android:scaleType="center"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="198dp"
        android:layout_marginTop="68dp"
        android:text="@string/how_use"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />


</RelativeLayout>





