<?xml version="1.0" encoding="utf-8"?>
<!-- show Navigation Drawer shape -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!--include app tool bar-->
    <include
        layout="@layout/app_bar_navigation_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- View which content two navigation view and Dashboard view -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--scroll view layout -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@color/colorPrimary">

                <!-- Navigation drawer view-->
                <android.support.design.widget.NavigationView
                    android:id="@+id/nav_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fitsSystemWindows="true"
                    app:headerLayout="@layout/nav_header_navigation_drawer"
                    app:menu="@menu/activity_navigation_drawer_drawer"
                    />
                <!--space between menu 1 and menu2-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    />
                <!--create menu2 i a navigation drawer-->
                <android.support.design.widget.NavigationView
                    android:id="@+id/nav_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fitsSystemWindows="true"
                    app:menu="@menu/options_menu"
                    />


                <!--Dashboard View-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="#fff"
                    android:text="@string/dashboard_text"
                    android:textSize="16sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    />

                <!-- include dashboard layout-->
                <include
                    layout="@layout/dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="109dp" />



            <!-- logout View -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="12dp"
                    android:paddingTop="8dp">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/logout"
                        android:layout_marginStart="82dp"
                        android:contentDescription="@string/logout_icon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_marginStart="8dp"
                        android:text="@string/logout"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
